# multi-document-search-engine

./: .gitignore  CMakeLists.txt  README.md
api/: app.py
data/: test1.txt
frontend/: app.js  index.html
src/: bindings.cpp  bm25.h  build_index.cpp  inverted_index.h  main.cpp  pdf_extractor.cpp  posting.h  test_bm25.cpp  test_trie.cpp  tokenizer.h  trie.h
